--- a/Recipe_Sharing_Website/Components/Routes.razor
+++ b/Recipe_Sharing_Website/Components/Routes.razor
@@ -1,11 +1,15 @@
 ﻿@using Microsoft.AspNetCore.Components.Routing
+@using Microsoft.AspNetCore.Components.Web
 @using Recipe_Sharing_Website.Components.Layout
+
+@rendermode @(new InteractiveServerRenderMode())
 
 <Router AppAssembly="@typeof(Program).Assembly">
     <Found Context="routeData">
         <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
         <FocusOnNavigate RouteData="@routeData" Selector="h1" />
     </Found>
+
     <NotFound>
         <LayoutView Layout="@typeof(MainLayout)">
             <p>Sorry, there's nothing at this address.</p>
